--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,7 +3,7 @@
   width: 100%;
   height: 100vh;
   background-color: #34495e;
-  background: url(/assets/img/login-bg.jpg) 50% 50%/cover;
+  background: url(/survey-live/assets/img/login-bg.jpg) 50% 50%/cover;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
